apply modern java and cleanup implementation in monticore-test/it