@@ -6,8 +6,6 @@ import java.io.IOException;
 import java.io.StringReader;
 
 import de.se_rwth.commons.logging.Log;
-import de.se_rwth.commons.logging.LogStub;
-import org.junit.jupiter.api.BeforeEach;
 
 import de.monticore.ast.ASTNode;
 import mc.GeneratorIntegrationsTest;
@@ -18,12 +16,6 @@ import org.junit.jupiter.api.Test;
 import static org.junit.jupiter.api.Assertions.*;
 
 public class CommentsTest extends GeneratorIntegrationsTest {
-  
-  @BeforeEach
-  public void before() {
-    LogStub.init();
-    Log.enableFailQuick(false);
-  }
   
   /**
    * This Test tests if the comments are assigned correctly. 
@@ -41,9 +33,9 @@ public class CommentsTest extends GeneratorIntegrationsTest {
     assertFalse(p.hasErrors());
     assertEquals(1, ast.getAList().size());
     assertEquals(1, ast.getBList().size());
-    assertEquals(1, ((ASTNode) ast.getAList().get(0)).get_PreCommentList().size());
-    assertEquals(1, ((ASTNode) ast.getAList().get(0)).get_PostCommentList().size());
-    assertEquals(0, ((ASTNode) ast.getBList().get(0)).get_PreCommentList().size());
+    assertEquals(1, ((ASTNode) ast.getAList().getFirst()).get_PreCommentList().size());
+    assertEquals(1, ((ASTNode) ast.getAList().getFirst()).get_PostCommentList().size());
+    assertEquals(0, ((ASTNode) ast.getBList().getFirst()).get_PreCommentList().size());
     assertTrue(Log.getFindings().isEmpty());
   }
 }
