@@ -6,7 +6,6 @@ import mc.feature.parserinfo.parserinfosimpleinheritancetest._parser._auxiliary.
 import mc.feature.parserinfo.parserinfotest._parser.ParserInfoTestParserInfo;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import de.se_rwth.commons.logging.Log;
@@ -52,11 +51,11 @@ public class ParserInfoTest {
         List<Integer> states = IntStream.range(0, MAX_STATE_NUMBER)
                 .filter(ParserInfoTestParserInfo::stateHasUsageNameUsageName1)
                 .boxed()
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(1, states.size());
 
-        int s = states.get(0);
+        int s = states.getFirst();
         assertFalse(ParserInfoTestParserInfo.stateReferencesElementASymbol(s));
         assertFalse(ParserInfoTestParserInfo.stateReferencesElementBSymbol(s));
         assertTrue(Log.getFindings().isEmpty());
@@ -67,11 +66,11 @@ public class ParserInfoTest {
         List<Integer> states = IntStream.range(0, MAX_STATE_NUMBER)
                 .filter(ParserInfoTestParserInfo::stateHasUsageNameUsageName2)
                 .boxed()
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(1, states.size());
 
-        int s = states.get(0);
+        int s = states.getFirst();
         assertTrue(ParserInfoTestParserInfo.stateReferencesElementASymbol(s));
         assertFalse(ParserInfoTestParserInfo.stateReferencesElementBSymbol(s));
         assertTrue(Log.getFindings().isEmpty());
@@ -82,11 +81,11 @@ public class ParserInfoTest {
         List<Integer> states = IntStream.range(0, MAX_STATE_NUMBER)
                 .filter(ParserInfoTestParserInfo::stateHasUsageNameRefA)
                 .boxed()
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(1, states.size());
 
-        int s = states.get(0);
+        int s = states.getFirst();
         assertTrue(ParserInfoTestParserInfo.stateReferencesElementASymbol(s));
         assertFalse(ParserInfoTestParserInfo.stateReferencesElementBSymbol(s));
         assertTrue(Log.getFindings().isEmpty());
@@ -97,11 +96,11 @@ public class ParserInfoTest {
         List<Integer> states = IntStream.range(0, MAX_STATE_NUMBER)
                 .filter(ParserInfoTestParserInfo::stateHasUsageNameRefB)
                 .boxed()
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(1, states.size());
 
-        int s = states.get(0);
+        int s = states.getFirst();
         assertFalse(ParserInfoTestParserInfo.stateReferencesElementASymbol(s));
         assertTrue(ParserInfoTestParserInfo.stateReferencesElementBSymbol(s));
         assertTrue(Log.getFindings().isEmpty());
@@ -112,7 +111,7 @@ public class ParserInfoTest {
         List<Integer> states = IntStream.range(0, MAX_STATE_NUMBER)
                 .filter(ParserInfoTestParserInfo::stateHasUsageNameUsageNameForList1)
                 .boxed()
-                .collect(Collectors.toList());
+                .toList();
 
         // '(a || ",")+' is replaced with 'a ("," a)*'
         assertEquals(2, states.size());
@@ -129,7 +128,7 @@ public class ParserInfoTest {
         List<Integer> states = IntStream.range(0, MAX_STATE_NUMBER)
                 .filter(ParserInfoTestParserInfo::stateHasUsageNameUsageNameForList2)
                 .boxed()
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(2, states.size());
 
@@ -146,7 +145,7 @@ public class ParserInfoTest {
             List<Integer> states = IntStream.range(0, MAX_STATE_NUMBER)
                     .filter(ParserInfoTestParserInfo::stateReferencesElementASymbol)
                     .boxed()
-                    .collect(Collectors.toList());
+                    .toList();
 
             assertFalse(states.isEmpty());
         }
@@ -162,7 +161,7 @@ public class ParserInfoTest {
             List<Integer> states = IntStream.range(0, MAX_STATE_NUMBER)
                     .filter(ParserInfoTestParserInfo::stateReferencesElementASymbol)
                     .boxed()
-                    .collect(Collectors.toList());
+                    .toList();
 
             assertTrue(states.isEmpty());
         }
@@ -174,7 +173,7 @@ public class ParserInfoTest {
         List<Integer> states = IntStream.range(0, MAX_STATE_NUMBER)
             .filter(ParserInfoTestParserInfo::stateDefinesName)
             .boxed()
-            .collect(Collectors.toList());
+            .toList();
 
         // ElementA to D are symbols and therefore define names
         assertEquals(4, states.size());
